// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TagItem Default smoke-test 1`] = `
.c0 {
  isolation: isolate;
  position: relative;
  height: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c0:not(:disabled):not([aria-disabled]):focus,
.c0[aria-disabled='false']:focus,
.c0:not(:disabled):not([aria-disabled]):active,
.c0[aria-disabled='false']:active,
.c0:not(:disabled):not([aria-disabled]):focus-visible,
.c0[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c0:disabled,
.c0[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c1 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #7ACCB1;
}

.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
}

.c3 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
}

.c3::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c3::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c4 {
  max-width: 152px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: inherit;
  color: inherit;
  line-height: inherit;
}

<div data-dark="false">
  <a role="button"
     tabindex="0"
     href
     target
     rel
     class="c0"
  >
    <div class="c1">
    </div>
    <div class="c2">
      <div class="c3">
        <span class="c4">
          #女の子
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`TagItem Playground smoke-test 1`] = `
.c1 {
  isolation: isolate;
  position: relative;
  height: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text5);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c1:not(:disabled):not([aria-disabled]):focus,
.c1[aria-disabled='false']:focus,
.c1:not(:disabled):not([aria-disabled]):active,
.c1[aria-disabled='false']:active,
.c1:not(:disabled):not([aria-disabled]):focus-visible,
.c1[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c1:disabled,
.c1[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c8 {
  isolation: isolate;
  position: relative;
  height: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 8px;
  padding-left: 16px;
  color: var(--charcoal-text5);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c8:not(:disabled):not([aria-disabled]):focus,
.c8[aria-disabled='false']:focus,
.c8:not(:disabled):not([aria-disabled]):active,
.c8[aria-disabled='false']:active,
.c8:not(:disabled):not([aria-disabled]):focus-visible,
.c8[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c8:disabled,
.c8[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c9 {
  isolation: isolate;
  position: relative;
  height: 40px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 24px;
  padding-left: 24px;
  color: var(--charcoal-text2);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c9:not(:disabled):not([aria-disabled]):focus,
.c9[aria-disabled='false']:focus,
.c9:not(:disabled):not([aria-disabled]):active,
.c9[aria-disabled='false']:active,
.c9:not(:disabled):not([aria-disabled]):focus-visible,
.c9[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c9:disabled,
.c9[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c11 {
  isolation: isolate;
  position: relative;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 16px;
  padding-left: 16px;
  color: var(--charcoal-text5);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c11:not(:disabled):not([aria-disabled]):focus,
.c11[aria-disabled='false']:focus,
.c11:not(:disabled):not([aria-disabled]):active,
.c11[aria-disabled='false']:active,
.c11:not(:disabled):not([aria-disabled]):focus-visible,
.c11[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c11:disabled,
.c11[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c12 {
  isolation: isolate;
  position: relative;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 8px;
  padding-left: 16px;
  color: var(--charcoal-text5);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c12:not(:disabled):not([aria-disabled]):focus,
.c12[aria-disabled='false']:focus,
.c12:not(:disabled):not([aria-disabled]):active,
.c12[aria-disabled='false']:active,
.c12:not(:disabled):not([aria-disabled]):focus-visible,
.c12[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c12:disabled,
.c12[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c13 {
  isolation: isolate;
  position: relative;
  height: 32px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  overflow: hidden;
  border-radius: 4px;
  padding-right: 16px;
  padding-left: 16px;
  color: var(--charcoal-text2);
  -webkit-transition: 0.2s box-shadow;
  transition: 0.2s box-shadow;
}

.c13:not(:disabled):not([aria-disabled]):focus,
.c13[aria-disabled='false']:focus,
.c13:not(:disabled):not([aria-disabled]):active,
.c13[aria-disabled='false']:active,
.c13:not(:disabled):not([aria-disabled]):focus-visible,
.c13[aria-disabled='false']:focus-visible {
  outline: none;
  box-shadow: 0 0 0 4px rgba(0,150,250,0.32);
}

.c13:disabled,
.c13[aria-disabled]:not([aria-disabled='false']) {
  opacity: 0.32;
  cursor: default;
}

.c2 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #7ACCB1;
}

.c10 {
  position: absolute;
  z-index: 1;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #7ACCB1;
  background-color: var(--charcoal-surface3);
}

.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  z-index: 2;
}

.c4 {
  font-size: 14px;
  line-height: 22px;
  font-weight: bold;
  display: flow-root;
}

.c4::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c4::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  font-size: 10px;
}

.c5 {
  max-width: 152px;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
  font-size: inherit;
  color: inherit;
  line-height: inherit;
}

.c7 {
  font-size: 12px;
  line-height: 20px;
  font-weight: bold;
  display: flow-root;
}

.c7::before {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-top: -4px;
}

.c7::after {
  display: block;
  width: 0;
  height: 0;
  content: '';
  margin-bottom: -4px;
}

.c0 {
  display: grid;
  grid-template-columns: repeat(4,1fr);
}

.c0 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1em;
}

<div data-dark="false">
  <div>
    <div class="c0">
      <div>
        <a role="button"
           tabindex="0"
           class="c1"
        >
          <div class="c2">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
      </div>
      <div>
        <a role="button"
           tabindex="0"
           class="c1"
        >
          <div class="c2">
          </div>
          <div class="c3">
            <div class="c6">
              <div class="c7">
                <span class="c5">
                  girl
                </span>
              </div>
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
      </div>
    </div>
    <div class="c0">
      <div>
        <a role="button"
           tabindex="0"
           class="c8"
        >
          <div class="c2">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
            <pixiv-icon name="16/Remove">
            </pixiv-icon>
          </div>
        </a>
      </div>
      <div>
      </div>
      <div>
        <a role="button"
           tabindex="0"
           class="c8"
        >
          <div class="c2">
          </div>
          <div class="c3">
            <div class="c6">
              <div class="c7">
                <span class="c5">
                  girl
                </span>
              </div>
              <span class="c5">
                #女の子
              </span>
            </div>
            <pixiv-icon name="16/Remove">
            </pixiv-icon>
          </div>
        </a>
      </div>
      <div>
      </div>
    </div>
    <div class="c0">
      <div>
        <a role="button"
           tabindex="0"
           class="c9"
        >
          <div class="c10">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a role="button"
           aria-disabled="true"
           class="c9"
        >
          <div class="c10">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a role="button"
           tabindex="0"
           class="c9"
        >
          <div class="c10">
          </div>
          <div class="c3">
            <div class="c6">
              <div class="c7">
                <span class="c5">
                  girl
                </span>
              </div>
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a role="button"
           aria-disabled="true"
           class="c9"
        >
          <div class="c10">
          </div>
          <div class="c3">
            <div class="c6">
              <div class="c7">
                <span class="c5">
                  girl
                </span>
              </div>
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div class="c0">
      <div>
        <a role="button"
           tabindex="0"
           class="c11"
        >
          <div class="c2">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div class="c0">
      <div>
        <a role="button"
           tabindex="0"
           class="c12"
        >
          <div class="c2">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
            <pixiv-icon name="16/Remove">
            </pixiv-icon>
          </div>
        </a>
      </div>
    </div>
    <div class="c0">
      <div>
        <a role="button"
           tabindex="0"
           class="c13"
        >
          <div class="c10">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a role="button"
           aria-disabled="true"
           class="c13"
        >
          <div class="c10">
          </div>
          <div class="c3">
            <div class="c4">
              <span class="c5">
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
